# catalina

./: .gitignore  ChangeLog  Makefile.am  README  TODO  acinclude.m4  autogen.sh  catalina.pc.in  changelog  configure.ac  control.in  copyright  libcatalina-1.0-0.install  libcatalina-1.0-0.symbols  libcatalina-dev.install  libcatalina-doc.install  rules  watch
bindings/vala/: Makefile.am  catalina-1.0.vapi
catalina/: Makefile.am  catalina-binary-formatter-private.h  catalina-binary-formatter.c  catalina-binary-formatter.h  catalina-formatter.c  catalina-formatter.h  catalina-storage-private.h  catalina-storage.c  catalina-storage.h  catalina-tests  catalina-transform.c  catalina-transform.h  catalina-version.h.in  catalina-zlib-transform.c  catalina-zlib-transform.h  catalina.h
catalina/tests/: main.c
doc/: async-example.c  async-example.c.html  catalina.html  catalina.t2t  sync-example.c  sync-example.c.html
doc/reference/: Makefile.am  catalina-docs.sgml  catalina-docs.xml
examples/beatdown/: Makefile.am  beatdown.vala
tests/: Makefile.am  async-test.h  binary-formatter-tests.c  long-test-data.h  storage-tests.c  zlib-transform-tests.c
tests/mocks/: mock-person.h
